--- a/README
+++ b/README
@@ -3,7 +3,7 @@ the techtc300 http://techtc.cs.technion.ac.il/techtc300/.
 
 Requirements
 
-- Python 2.7 or above
+- Python 2.6 or above
 
 - html2text (tested with version 1.3.2a)
   http://www.aaronsw.com/2002/html2text/
@@ -11,8 +11,8 @@ Requirements
 - wget (should be installed on your machine)
 
 - dmoz RDF dump files structure.rdf.u8 and content.rdf.u8. Can be
-downloaded at http://www.dmoz.org/rdf.html
+  downloaded at http://www.dmoz.org/rdf.html
 
-- 17GB of RAM. I know it's a lot, till I find a way to parse the rdf
-files incrementally.
+- 10GB of RAM
 
+- A good internet connection
