--- a/README
+++ b/README
@@ -8,11 +8,13 @@ Requirements
 - html2text (tested with version 1.3.2a)
   http://www.aaronsw.com/2002/html2text/
 
-- wget (should be installed on your machine)
+- wget
 
 - dmoz RDF dump files structure.rdf.u8 and content.rdf.u8. Can be
   downloaded at http://www.dmoz.org/rdf.html
 
-- 10GB of RAM
+Recommanded
+
+- 8GB of RAM
 
 - A good internet connection
