--- a/README
+++ b/README
@@ -5,8 +5,8 @@ Requirements
 
 - Python 2.6 or above
 
-- html2text (tested with version 1.3.2a)
-  http://www.aaronsw.com/2002/html2text/
+- html2text version 1.3.2a
+  http://www.mbayer.de/html2text/files.shtml      
 
 - wget
 
