--- a/README
+++ b/README
@@ -20,6 +20,8 @@ You can specify the prefix where to install with option --prefix, such as
 REQUIREMENTS
 ------------
 
+* For build-techtc.py
+
 - Python 2.7 or above
 
 - python-lxml
@@ -27,12 +29,14 @@ REQUIREMENTS
 - dmoz RDF dump files structure.rdf.u8 and content.rdf.u8. Can be
   downloaded at http://www.dmoz.org/rdf.html
 
-- One the following text based web browser
-
-* w3m, lynx, elinks, links, links2
+- One the following text based web browser w3m, lynx, elinks, links,
+  links2
 
 - wget
 
+* For techtc2CSV_all.sh
+
+- gnu parallel (for techtc2CSV_all.sh)
 
 USAGE
 -----
